--- a/src/components/header/Menu.css
+++ b/src/components/header/Menu.css
@@ -4,21 +4,38 @@
     box-sizing: border-box;
 }
 .heaader{
-    background-color: pink;
+    background: linear-gradient(290deg, #921b1b, #e69e5b);
+    background-size: 400% 400%;
+    animation: gradientAnimation 3s ease infinite;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    z-index: 1;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
 
+}
+.heaader h1{
+color: white;
 }
 .nav-menu{
     display: flex;
-    list-style-type: none;
+    list-style: none;
+    text-decoration: none;
     gap: 3rem;
 }
-.nav-link{
-    text-decoration: none;
+
+.links{
     color: black;
+    list-style: none;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+.links:hover{
+    color: yellow;
+    
 }
 .list-conteiner{
     min-height: 30vh;
@@ -27,5 +44,35 @@
     
     
 }
+.imglogo{
+    position: absolute;
+    top: 0;
+    left: 13%;
+    transform: translateX(-60%) translateY(-10%);
+    z-index: 2 ;
+    width: 20%;
+    max-width: 50px;
+    height: auto;
+    
+}
+.nav-link.active {
+    font-weight: bold;
+    text-decoration: underline;
+}
+.item-list-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
-            
+
+@keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
